# perspectiva-dados

./: Comandos_basicos.ipynb  README.md  Resumo.txt  Revisao1 Giovanni.ipynb  Untitled.ipynb  aprendendo_uv.ipynb  pyproject.toml
Aprendizado_Supervisionado/: supervisionado.ipynb
Lab_0/: Revisao2 Giovanni.ipynb
PLN/: Codigo_PLN.ipynb  tsne.ipynb
Webscraping/: Webscrapping (1).ipynb
Webscraping/data/: .~lock.noticias_palmeiras (1).csv#
